@startuml

class Motor{
+__init__(adcs, pwms, ens) -> None:
+wechsele_aktuellen_zustand(self)-> None
+regle_geschwindigkeit(self,dc=2**10/4, frequency=2*1e3, vorwärts=True)->None
+motor_strom_monitoring(self, vorwärts=True)->list[float]
+warte_auf_endanschlag()
}

class Sender{
+__init__(self, start_pin)->None
+kontaktiere_empfänger(self)
+wurde_pin_gedrückt(self)->int
+def switch_pin_zustand(self)->None
-_ermögliche_aufwachen(self)->None
-_gehe_schlafen(self)->None
-_aktiviere_antenne(self)
-_aktiviere_esp_now(self)
-_verpacke_nachricht(self, aktion: str)
}

class Sender_main(){
+Sender
+run()
}

class Empfänger{
+__init__()
+sende_MAC()
+lauschen()
}

class Main{
+motor : LinearAktuator
#sender : Sender
+empfänger : Empfänger

+enter_deep_sleep()
+run_active_tasks(rtc, empfänger, motor)
+motor_interaktion()
+run()
}

Main *-- Motor
Main *-- Empfänger
@enduml